﻿# Image Uploader changelog 
#
# http://zenden.ws/imageuploader

version 1.3.1b

build 4309
[f] Fixed crash when extracting frames from a video file with subtitles (access violation in VSFilter.dll aka DirectVobSub).

New servers:
[+] embedupload.com  
[+] jheberg.net.xml
[+] mirrorupload.net.xml
[+] multiup.org.xml

build 4307
[+] Added ukrainian translation
[c] Updated turkish translation
[f] Bugfixes

build 4299

[~] bugfixes: Image Editor: undo bugs, full repaint bug (performance issue)
[~] Store explorer context menu settings only in registry, not in settings.xml
[~] Remove all registry keys in uninstaller
[~] Fixed memory and GDI leaks
[+] Added "PrtScreen" and "Clear" items to hotkey editor's context menu
[+] Display compiler version in About dialog 
[~] Fixed incorrect icon sizes in file list when high DPI is set
[~] Documentation update 

-------------------------
[+] Added Image Editor
[+] Scripting API changes: added PCRE-compatible class CRegExp, CWebBrowser, function tr() for internalization, 
[+] Added vk.com support
[~] Fixed small bugs
[~] Changed license

version 1.3.0.4222 (12.03.2015)
[~] Fixed big file (>150 Mb) uploading to Dropbox (added chunked uploading functions to scripting API)
[+] Added swedish translation (thanks to Åke Engelbrektson)
[+] Added more languages to installer. The language choosen in installer now is selected by default at program's startup.
 
version 1.3.0.4220
[~] Complete refactoring of video grabber module, it has been moved to the core
[+] Unicode file names support (non-current locale) for FFmpeg
[~] FFmpeg library has been updated to the last version 2.6 (fixed broken H264 support)
[~] Fixed producing distorted images while grabbing images from video with dimensions not divisible by 4 (FFmpeg)
[~] Fixed producing incomplete frame count (DirectShow)
[~] Modified program's icon, added full sized icon (256x256) for modern Windows versions