@@ -7,6 +7,11 @@
 			"text" : "Пожалуйста, войдите в ваш Яндекс аккаунт в только что открывшемся браузере, подвердите доступ к вашим Яндекс.Фоткам и скопируйте код подверждения.\r\nВведите код подтверждения:"
 		}
 	},
+	"googledrive" : {
+		"confirmation": {
+			"text" : "Пожалуйста, войдите в ваш Google аккаунт в только что открывшемся браузере, подвердите доступ к вашему Google Drive и скопируйте код подверждения.\r\nВведите код подтверждения:"
+		}
+	},
 	"radikal" : {
 		"login_error" : "Ошибка авторизации на radikal.ru"
 	},
