@@ -439,9 +439,15 @@
 		</Actions>
 		<Result DirectUrlTemplate="stub" />
 	</Server2>
+	<Server2 Name="5cm.ru" Type="image" Plugin="5cm"  >
+		<Result ImageUrlTemplate="stub" ThumbUrlTemplate="stub" ViewUrlTemplate="stub"/>
+	</Server2>
 	<Server3 Name="vk.com" Authorize="2" Type="image" Plugin="vk" MinVersion="1.3.1.4270" SupportsFolders="1" NeedPassword="0" >
 		<Result ImageUrlTemplate="stub" ThumbUrlTemplate="stub" ViewUrlTemplate="stub"/>
 	</Server3>
+	<Server2 Name="Google Drive" FileHost="1" Authorize="2" Type="file" Plugin="googledrive" SupportsFolders="1" NeedPassword="0" >
+		<Result ImageUrlTemplate="stub" ThumbUrlTemplate="stub" ViewUrlTemplate="stub"/>
+	</Server2>
 	<Server3 Name="vfl.ru" Authorize="0" Type="image"  Plugin="vfl"  MinVersion="1.3.1.4274" >
 		<Result ImageUrlTemplate="stub" ThumbUrlTemplate="stub"/>
 	</Server3>
