@@ -9,6 +9,7 @@
 		<Entry Name="Data/Favicons/*.ico" SaveToFolder="%datapath%/Favicons/" Action="add"/>
 	</Entries>
 <Info>
-[~] Fixed Picasa authorization
+[+] Google Drive (Image Uploader v.1.3.0 and later)
+[+] 5cm.ru (Image Uploader v.1.3.0 and later)
 </Info>
 </UpdatePackageSource>
