@@ -4,6 +4,9 @@
 
 версия 1.3.1b
 
+build 4311
+[+] Добавлена поддержка Google Drive
+
 build 4309
 [f] Исправлен вылет программы при извлечении кадров их видео с субтитрами с включенным кривым фильтром VSFilter (DirectVobSub).
 
